hphp/hack/test/typecheck/functional_higher_order.php.exp
File "functional_higher_order.php", line 13, characters 10-23:
The builtin `call_user_func` is deprecated. (Typing[4128])
